--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.header {
+  background-image: url('../../public/images/bg0.webp');
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.header-2 {
+  background-image: url('../../public/images/bg5.svg');
+}
+.back-2 {
+  background-image: url('../../public/images/bg6.svg');
+}
+.back-3 {
+  background-image: url('../../public/images/bg12.webp');
+  background-size: cover;
+}
+.back-4 {
+  background-image: url('../../public/images/bg13.webp');
+  background-size: cover;
+}
+.sub {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+}
+.swiper-pagination-bullet {
+  background: #fff!important;
+}
+.grad {
+  background: linear-gradient(70deg, #A502FB 0%, #25003BFA 100%);
+}
+@media (max-width: 450px) {
+  .back-4 {
+    background-image: none;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
